--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.31.0",
     "@strapi/plugin-users-permissions": "5.31.0",
+    "@strapi/provider-email-nodemailer": "^5.33.0",
     "@strapi/strapi": "5.31.0",
     "app-store-scraper": "^0.18.0",
     "fs-extra": "^10.0.0",
     "google-play-scraper": "^10.1.2",
     "mime-types": "^2.1.27",
     "mysql2": "3.9.8",
+    "nodemailer": "^7.0.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
