--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@strapi/plugin-cloud": "5.31.0",
     "@strapi/plugin-users-permissions": "5.31.0",
     "@strapi/provider-email-nodemailer": "^5.33.0",
+    "@strapi/provider-email-sendgrid": "^5.33.0",
     "@strapi/strapi": "5.31.0",
     "app-store-scraper": "^0.18.0",
     "fs-extra": "^10.0.0",
